<resources>
    <string name="app_name">TrainIT!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo">logo</string>
    <string name="title_activity_main">TrainIT</string>
    <!-- Strings used for fragments for navigation -->
    <string name="menu_fragment_label">Menu Fragment</string>
    <string name="weather_fragment_label">Weather Fragment</string>
    <string name="new_activity">New activity</string>
    <string name="all_activities">All activities</string>
    <string name="actual_weather">Actual weather</string>
    <string name="back">Back</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="maps_fragment_label">Maps Fragment</string>
    <string name="speed">Speed</string>
    <string name="title">TrainIT!</string>
    <string name="turn_on_gps">Turn on gps</string>
    <string name="you_need_to_turn_on_your_gps">You need to turn on your GPS!</string>
    <string name="notificationP1">Congratulations!</string>
</resources>