<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="329dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bowlby_one"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/button_all_activities"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:width="1000dp"
        android:backgroundTint="#89AF9A"
        android:text="@string/all_activities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_new_activity" />

    <Button
        android:id="@+id/button_actual_weather"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:width="1000dp"
        android:backgroundTint="#A6B5B0"
        android:text="@string/actual_weather"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_all_activities"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_new_activity"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_marginTop="96dp"
        android:width="1000dp"
        android:backgroundTint="#4A9175"
        android:text="@string/new_activity"
        android:textColorHighlight="@color/purple_200"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />



</androidx.constraintlayout.widget.ConstraintLayout>